3. nginx_routing/2_ingress.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment
  namespace: sm

spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: sm
spec:
# ingress를 적용하기위해 clusterIP로 연결
  type: ClusterIP
  ports:
    - name: http
      port: 80 # service Port를 의미,
      targetPort: 80 #service가 라우팅해줄 대상의 port
  selector:
    app: my-nginx

---
# ingress controller 설치는 별도 필요
# ingress controlle도 nginx기반으로 구성되어있음
# ingress controller를 설치시에 alb가 생성되고 Ingress자원과 함께
# ingress controller 1개에서 여러개의 infress 로 라우팅
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: sm
  annotations:
    kubernetes.io/ingress.class: nginx
    # 첫번째 prefix 제거 후 endpoint 전달 (https://server.devhot.kr/product-service/product/list -> https://server.devhot.kr/product/list) 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: server.devhot.kr
    http:
      paths:
      - path: /product-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /order-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
